--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
-    <title>TP Integrador Front | BootStrap |Lautaro Roldan</title>
+    <title>TP Integrador Front | JavaScript |Lautaro Roldan</title>
   </head>
   <body>
     <!--HEADER-->
