--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" id="green" href="">Compra tickets</a>
+                <a class="nav-link" id="green" href="./pages/tickets.html"
+                  >Compra tickets</a
+                >
               </li>
             </ul>
           </div>
