--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -22,7 +22,7 @@
         id="nav"
       >
         <div class="container justify-content-md-end">
-          <a class="navbar-brand" href="#">Conf Bs As</a>
+          <a class="navbar-brand" href="../index.html">Conf Bs As</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -38,24 +38,24 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#Conferencia"
+                <a class="nav-link" aria-current="page" href=""
                   >La Conferencia</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#2Orador">Las oradores</a>
+                <a class="nav-link" href="">Las oradores</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#3Fecha">El lugar y la fecha</a>
+                <a class="nav-link" href="">El lugar y la fecha</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#4Orador"
+                <a class="nav-link active" href="../index.html"
                   >Conviértete en orador</a
                 >
               </li>
 
               <li class="nav-item">
-                <a class="nav-link" id="green" href="">Comprar tickets</a>
+                <a class="nav-link" id="green" href="#">Comprar tickets</a>
               </li>
             </ul>
           </div>
