--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -17,10 +17,7 @@
     <!--HEADER-->
     <header>
       <!--NAV-->
-      <nav
-        class="navbar navbar-expand-md navbar-dark fixed-top fondoNavBar"
-        id="nav"
-      >
+      <nav class="navbar navbar-expand-md navbar-dark fondoNavBar" id="nav">
         <div class="container justify-content-md-end">
           <a class="navbar-brand" href="../index.html">Conf Bs As</a>
           <button
@@ -65,7 +62,144 @@
     <!--MAIN-->
     <main>
       <!--SECTION-->
-      <section></section>
+      <section class="container">
+        <div class="row mt-5 mb-0 me-auto ms-auto boxPlan">
+          <div class="col-md-4 mb-2 ps-md-0 pe-md-1">
+            <div class="col card rounded-0 border-primary pt-3">
+              <div class="card-body text-center">
+                <h5 class="card-title mb-4">Estudiante</h5>
+                <p class="card-subtitle mb-4">Tienen un descuento</p>
+                <h6 class="mb-4"><b>80%</b></h6>
+                <p class="card-text boxSizeSmall pb-3">
+                  * presentar documentación
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-2 ps-md-0 pe-md-1">
+            <div class="col card rounded-0 border-success pt-3">
+              <div class="card-body text-center">
+                <h5 class="card-title mb-4">Trainee</h5>
+                <p class="card-subtitle mb-4">Tienen un descuento</p>
+                <h6 class="mb-4"><b>50%</b></h6>
+                <p class="card-text boxSizeSmall pb-3">
+                  * presentar documentación
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-2 ps-md-0 pe-md-0">
+            <div class="col card rounded-0 border-warning pt-3">
+              <div class="card-body text-center">
+                <h5 class="card-title mb-4">Junior</h5>
+                <p class="card-subtitle mb-4">Tienen un descuento</p>
+                <h6 class="mb-4"><b>15%</b></h6>
+                <p class="card-text boxSizeSmall pb-3">
+                  * presentar documentación
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <h2
+          class="d-flex flex-column justify-content-center align-items-center fs-2 p-3 mb-0"
+        >
+          <div class="boxSizeSmall">VENTA</div>
+          <div>VALOR DE TICKET $200</div>
+        </h2>
+
+        <form class="d-flex flex-column boxPlan me-auto ms-auto mb-5" id="form">
+          <div class="row">
+            <div class="col-12 col-md-6 mb-3">
+              <input
+                id="name"
+                type="text"
+                class="form-control"
+                placeholder="Nombre"
+                aria-label="Nombre"
+              />
+            </div>
+            <div class="col-12 col-md-6 mb-3">
+              <input
+                id="surname"
+                type="text"
+                class="form-control"
+                placeholder="Apellido"
+                aria-label="Apellido"
+              />
+            </div>
+          </div>
+
+          <div class="col-12 mb-3">
+            <input
+              id="email"
+              type="email"
+              class="form-control"
+              placeholder="Correo"
+              aria-label="Correo"
+            />
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-6 mb-3">
+              <div class="mb-2">Cantidad</div>
+              <div>
+                <input
+                  id="quantity"
+                  type="number"
+                  class="form-control"
+                  placeholder="cantidad"
+                  aria-label="cantidad"
+                />
+              </div>
+            </div>
+            <div class="col-12 col-md-6 mb-3">
+              <div class="mb-2">Categoria</div>
+              <select class="form-select" aria-label="categoria" id="category">
+                <option value="" selected>Seleccione una categoría</option>
+                <option value="1">Estudiante</option>
+                <option value="2">Trainee</option>
+                <option value="3">Junior</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="mt-3 mb-3">
+            <input
+              type="text"
+              class="form-control form-control-lg"
+              id="totalCharge"
+              placeholder="Total a Pagar: $"
+              aria-label="totalCost"
+              disabled="disabled"
+            />
+          </div>
+
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <!--resetButton-->
+              <button
+                type="reset"
+                class="btn buttonModifier mb-0 buttonBIG"
+                id="btnLightGreen"
+                id="resetButton"
+              >
+                Borrar
+              </button>
+            </div>
+            <div class="col-12 col-md-6">
+              <!--submitButton-->
+              <button
+                type="submit"
+                class="btn buttonModifier buttonBIG btnLightGreen"
+                id="submitButton"
+              >
+                Resumen
+              </button>
+            </div>
+          </div>
+        </form>
+      </section>
     </main>
     <!--FOOTER-->
     <footer class="pt-3 bg-gradient">
@@ -98,5 +232,7 @@
 
     <!--JAVASCRIPT-->
     <script src="../js/main.js"></script>
+    <!--SWEETALERT-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
