--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -63,7 +63,7 @@
     <main>
       <!--SECTION-->
       <section class="container">
-        <div class="row mt-5 mb-0 me-auto ms-auto boxPlan">
+        <div class="row mt-5 mb-0 me-auto ms-auto boxWidth">
           <div class="col-md-4 mb-2 ps-md-0 pe-md-1">
             <div class="col card rounded-0 border-primary pt-3">
               <div class="card-body text-center">
@@ -109,7 +109,10 @@
           <div>VALOR DE TICKET $200</div>
         </h2>
 
-        <form class="d-flex flex-column boxPlan me-auto ms-auto mb-5" id="form">
+        <form
+          class="d-flex flex-column boxWidth me-auto ms-auto mb-5"
+          id="form"
+        >
           <div class="row">
             <div class="col-12 col-md-6 mb-3">
               <input
